--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,13 @@
 <main class="main">
   <div class="card">
-    <img src="../assets/images/illustration-hero.svg" alt="illustration">
+    <img src="./assets/images/illustration-hero.svg" alt="illustration">
     <div class="info">
       <h1>Order Summary</h1>
       <p class="desc">You can now listen to millions of songs, audiobooks, and podcasts on any 
         device anywhere you like!</p>
       <div class="plan">
         <div class="price">
-          <img src="../assets/images/icon-music.svg" alt="icon-music">
+          <img src="./assets/images/icon-music.svg" alt="icon-music">
           <div>
             <h2>Annual Plan</h2>
             <p>$59.99/year</p>
